# shopify-api

./: config.py  database.py  dependencies.py  main.py  pyproject.toml
crud/: crud.py
internal/: keys.py
models/: models.py
routers/: donation.py  partners.py  user.py
schemas/: schemas.py
